--- a/src/app/component/profile-user/profile-user.component.html
+++ b/src/app/component/profile-user/profile-user.component.html
@@ -54,7 +54,7 @@
                             <td>{{ ef.relationship }}</td>
                             <td>{{ ef.phone }}</td>
                             <td>
-                                <button mat-icon-button>
+                                <button style="height: 5px;" mat-icon-button>
                                   <mat-icon (click)="editFamilyDialog()">edit</mat-icon>
                                 </button>
                             </td>
