--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -74,7 +74,7 @@
                 </mat-list-item>
                 <div style="padding: 0 0 0 40px;" class="subsetting" [ngClass]="{'expanded' : showSetting}">
                     <mat-list-item>
-                        <a style="margin: -16px; padding: 10px 4rem 10px 16px;" routerLink="/leave type" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a style="margin: -16px; padding: 10px 4rem 10px 16px;" routerLink="/employee/type" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h3>Leave type</h3>
                         </a>
@@ -83,6 +83,36 @@
                         <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/department" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h3>Department</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/attendance" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Attendance</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/bank" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Bank</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/degree" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Degree</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/family" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Family</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/role" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Role</h3>
                         </a>
                     </mat-list-item>
                     <mat-list-item>
