--- a/src/app/component/employee-leave/dialog-edit-employee-leave.html
+++ b/src/app/component/employee-leave/dialog-edit-employee-leave.html
@@ -6,18 +6,16 @@
         <mat-form-field appearance="outline" color="primary" style="padding: 0px 8px;margin-bottom: 12px; color: #3f51b5; width: 80px;">
             <mat-label>Type</mat-label>
             <mat-select disableRipple [(value)]="empLeave.status" [formControl]="email">
-                <mat-option value="1">Approved</mat-option>
-                <mat-option value="2">Pendding</mat-option>
-                <mat-option value="3">Cancel</mat-option>
+                <mat-option [value]="1">Approved</mat-option>
+                <mat-option [value]="2">Pendding</mat-option>
+                <mat-option [value]="3">Cancel</mat-option>
             </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline" style="width: 100%;">
 
             <mat-label>Select Leave Type</mat-label>
             <mat-select disableRipple [(value)]="empLeave.emp_leave_reason_id">
-                <mat-option value="1">A</mat-option>
-                <mat-option value="2">B</mat-option>
-                <mat-option value="3">C</mat-option>
+                <mat-option *ngFor="let leaveType of leaveTypes" [value]="leaveType.id">{{ leaveType.name }}</mat-option>
             </mat-select>
         </mat-form-field>
 
