--- a/src/app/component/employee-leave/dialog-employee-leave.html
+++ b/src/app/component/employee-leave/dialog-employee-leave.html
@@ -19,9 +19,7 @@
 
             <mat-label>Select Leave Type</mat-label>
             <mat-select disableRipple [(value)]="empLeave.emp_leave_reason_id">
-                <mat-option value="1">A</mat-option>
-                <mat-option value="2">B</mat-option>
-                <mat-option value="3">C</mat-option>
+                <mat-option *ngFor="let leaveType of leaveTypes" value="{{ leaveType.id }}">{{ leaveType.name }}</mat-option>
             </mat-select>
         </mat-form-field>
 
