--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -14,50 +14,47 @@
         <h4 style="margin-left: 3px;">/ Leave </h4>
     </div>
 </div>
-<div style="margin: 0.8em">
-
-    <div style="display: flex; justify-content:center; align-items: center;  ">
-
-        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
-            <div>
-                <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
-                <div style="font-size: 1.2em">{{ total_leave }}</div>
-            </div>
-            <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
+<div>
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+        <div fxFlex="33%" fxFlex.sm="50%">
+            <mat-card style="display: flex; justify-content: space-between; align-items: center;">
+                <div>
+                    <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
+                    <div style="font-size: 1.2em">{{ total_leave }}</div>
+                </div>
+                <div>
+                    <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">people</mat-icon>
                 </button>
-            </div>
-
-
-        </mat-card>
-        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
-            <div>
-                <div style="font-size: 1.8em; line-height: 1.8em;">Leave Department</div>
-                <div style="font-size: 1.2em">02</div>
-            </div>
-            <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
+                </div>
+            </mat-card>
+        </div>
+        <div fxFlex="33%" fxFlex.sm="50%">
+            <mat-card style="display:  flex; justify-content: space-between; align-items: center;">
+                <div>
+                    <div style="font-size: 1.8em; line-height: 1.8em;">Leave Department</div>
+                    <div style="font-size: 1.2em">02</div>
+                </div>
+                <div>
+                    <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">apps</mat-icon>
                 </button>
-            </div>
-
-
-        </mat-card>
-        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
-            <div>
-                <div style="font-size: 1.8em; line-height: 1.8em;">Leave Type</div>
-                <div style="font-size: 1.2em">02</div>
-            </div>
-            <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
+                </div>
+            </mat-card>
+        </div>
+        <div fxFlex="34%" fxFlex.sm="50%">
+            <mat-card style="display: flex; justify-content: space-between; align-items: center;">
+                <div>
+                    <div style="font-size: 1.8em; line-height: 1.8em;">Leave Type</div>
+                    <div style="font-size: 1.2em">02</div>
+                </div>
+                <div>
+                    <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
                 </button>
-            </div>
-
-
-        </mat-card>
-
+                </div>
+            </mat-card>
+        </div>
     </div>
 
     <!--Table section-->
