--- a/src/app/dashboard-user/dashboard-user.component.html
+++ b/src/app/dashboard-user/dashboard-user.component.html
@@ -3,11 +3,7 @@
 
     <mat-card style="height: auto; margin: 15px;">
         <div style="display: flex; justify-content: space-between; align-items: center;">
-            <div class="mat-h2" style="margin-top: 10px;">Welcome USER
-                <div>
-                    name!
-                </div>
-            </div>
+            <div style="margin-top: 10px; font-size: 16px;">Welcome <span style="margin-left: 5px;" class="mat-h2">{{ user_name }}!</span></div>
             <div style="display: flex; justify-content: center; align-items: center">
                 <div style="display: flex; align-items: center; flex-direction: column;">
                     <div>{{ time | date: "h:mm:ss a" }}</div>
